--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@
     --black: #000;
     --pink: #ff3258;
     --white: #f0e9f2;
-    --white-1: #e5e5e6da;
+    --white-1: #e5e5e6da;a
 
 
     --container-max-width: 1180px;
@@ -405,7 +405,7 @@ body:not(.user-is-tabbing) a:focus {
 
 .header {
     background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), 
-        url('./images/header.jpg');
+        url('./images/starnight_head.jpg');
     height: 100vh;
     background-size: cover;
     background-position: center;
