--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@
     --black: #000;
     --pink: #ff3258;
     --white: #f0e9f2;
-    --white-1: #e5e5e6da;a
+    --white-1: #e5e5e6da;
 
 
     --container-max-width: 1180px;
